Fix nav bar links and add media queries for responsive design on mobile show page

--- a/sass/src/main.scss
+++ b/sass/src/main.scss
@@ -41,9 +41,9 @@ header {
 
     .nav-links{
       display: grid;
-      grid-template-columns: 160px 160px;
+      grid-template-columns: 100%;
       grid-template-rows: 50px;
-      justify-items: center;
+      justify-items: flex-end;
       align-items: center;
     }
 
@@ -174,6 +174,27 @@ p {
   h5 {
     font-size: 14px;
   }
+
+  //buttons area
+  .buttons-container {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: 120px 120px;
+    grid-template-rows: 100%;
+  }
+
+  .edit {
+    margin: 20px 5px;
+    padding: 6px 0px;
+    width: 100px;
+    background-color: blanchedalmond;
+    border-radius: 5px;
+    border: 1px solid blanchedalmond;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 14px;
+    text-align: center;
+  }
+
   .delete {
     margin: 20px 5px;
     padding: 5px;
@@ -181,11 +202,13 @@ p {
     border-radius: 5px;
     border: 3px solid blanchedalmond;
     font-family: 'Josefin Sans', sans-serif;
+    
   }
-  .delete:hover {
+  .delete:hover, .edit:hover {
     border: 2px solid rgb(206, 97, 97);
     background-color: rgb(211, 119, 119);
     box-shadow: 1px 1px 5px dimgray;
+    cursor: pointer;
   }
 }
 
@@ -197,6 +220,10 @@ p {
     transform: scale(0.85);
     gap: 50px;
   }
+  .review-container{
+    margin-top: 150px;
+    
+  }
 }
 
 @media only screen and (min-width: 990px) and(max-width: 1200px) {
@@ -206,6 +233,10 @@ p {
     margin: 0;
     transform: scale(0.9);
     gap: 50px;
+  }
+  .review-container{
+    margin: 150px 100px;
+    transform: scale(0.9);
   }
 }
 
@@ -225,5 +256,11 @@ p {
     align-items: center;
     transform: scale(0.9);
     gap: 80px;
+  }
+  .review-container{
+    margin: 220px 100px;
+    transform: scale(0.8);
+    display: flex;
+    flex-flow: row wrap;
   }
 }
